[package]
name = "cot_publisher"
version = "1.1.0"
edition = "2021"
authors = ["Martyn P <martyn@datasync.dev>"]
license = "MIT"
description = """
Cursor On Target (COT) Publisher for multicast or TakServer Data Stream
"""
homepage = "https://github.com/martynp/cot_publisher"
documentation = "https://github.com/martynp/cot_publisher"
repository = "https://github.com/martynp/cot_publisher"
readme = "readme.md"

[dependencies]
openssl = "0.10"
bytes = "1.10"
prost = "0.11"
chrono = "0.4"
varint-rs = "2.2"
log = "0.4"

[build-dependencies]
prost-build = "0.11"
